--- a/.devcontainer/Dockerfile.ubuntu-cpp
+++ b/.devcontainer/Dockerfile.ubuntu-cpp
@@ -1,6 +1,20 @@
 ARG VARIANT
 FROM ${VARIANT}
 
+# Install necessary packages available from standard repos
+RUN apt-get update -qq && export DEBIAN_FRONTEND=noninteractive && \
+    apt-get install -y --no-install-recommends \
+        software-properties-common wget apt-utils file zip unzip pkg-config \
+        openssh-client gpg-agent socat rsync \
+        make ninja-build git \
+        python3 python3-pip
+
+# setup access to ssh-agent on host
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends ssh retry
+# download public key for github.com
+RUN mkdir -p -m 0700 ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
+
 #### get project-specific dependencies
 # clone private repos as needed for closed-source dependencies
 RUN --mount=type=ssh git clone git@github.com:KevinHQChen/RoboDrop2.git RoboDrop2
@@ -13,7 +27,7 @@ RUN ./setup_cpp_linux --compiler gcc \
     # build system tools
     --cmake true --ninja true --make true \
     # code analysis tools
-     --cppcheck true  --clangtidy true --clangformat true \
+    --cppcheck true --clangtidy true --clangformat true \
     # package management
     --vcpkg true \
     # code coverage
