--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15...3.23)
+cmake_minimum_required(VERSION 3.21)
 
 project(CmakeConfigPackageTests LANGUAGES CXX)
 
@@ -7,9 +7,9 @@ project(CmakeConfigPackageTests LANGUAGES CXX)
 if(PROJECT_IS_TOP_LEVEL OR TEST_INSTALLED_VERSION)
   enable_testing()
 
-  find_package(cpp_starter_project CONFIG REQUIRED) # for intro, project_options, ...
+  find_package(autoDMP CONFIG REQUIRED) # for intro, project_options, ...
 
-  if(NOT TARGET cpp_starter_project::project_options)
+  if(NOT TARGET autoDMP::project_options)
     message(FATAL_ERROR "Requiered config package not found!")
     return() # be strictly paranoid for Template Janitor github action! CK
   endif()
@@ -49,7 +49,7 @@ include(Catch)
 
 add_library(catch_main OBJECT catch_main.cpp)
 target_link_libraries(catch_main PUBLIC Catch2::Catch2)
-target_link_libraries(catch_main PRIVATE cpp_starter_project::project_options)
+target_link_libraries(catch_main PRIVATE autoDMP::project_options)
 
 # Provide a simple smoke test to make sure that the CLI works and can display a --help message
 add_test(NAME cli.has_help COMMAND intro --help)
@@ -62,7 +62,7 @@ add_test(NAME cli.version_matches COMMAND intro --version)
 set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION "${PROJECT_VERSION}")
 
 add_executable(tests tests.cpp)
-target_link_libraries(tests PRIVATE cpp_starter_project::project_warnings cpp_starter_project::project_options catch_main)
+target_link_libraries(tests PRIVATE autoDMP::project_warnings autoDMP::project_options catch_main)
 
 # automatically discover tests that are defined in catch based test files you can modify the unittests. Set TEST_PREFIX
 # to whatever you want, or use different for different binaries
@@ -81,7 +81,7 @@ catch_discover_tests(
 
 # Add a file containing a set of constexpr tests
 add_executable(constexpr_tests constexpr_tests.cpp)
-target_link_libraries(constexpr_tests PRIVATE cpp_starter_project::project_options cpp_starter_project::project_warnings catch_main)
+target_link_libraries(constexpr_tests PRIVATE autoDMP::project_options autoDMP::project_warnings catch_main)
 
 catch_discover_tests(
   constexpr_tests
@@ -99,7 +99,7 @@ catch_discover_tests(
 # Disable the constexpr portion of the test, and build again this allows us to have an executable that we can debug when
 # things go wrong with the constexpr testing
 add_executable(relaxed_constexpr_tests constexpr_tests.cpp)
-target_link_libraries(relaxed_constexpr_tests PRIVATE cpp_starter_project::project_options cpp_starter_project::project_warnings catch_main)
+target_link_libraries(relaxed_constexpr_tests PRIVATE autoDMP::project_options autoDMP::project_warnings catch_main)
 target_compile_definitions(relaxed_constexpr_tests PRIVATE -DCATCH_CONFIG_RUNTIME_STATIC_REQUIRE)
 
 catch_discover_tests(
