--- a/.devcontainer/Dockerfile.ubuntu-cpp
+++ b/.devcontainer/Dockerfile.ubuntu-cpp
@@ -19,7 +19,7 @@ RUN mkdir -p -m 0700 ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
 #### get project-specific dependencies
 # clone private repos as needed for closed-source dependencies
 RUN --mount=type=ssh git clone git@github.com:KevinHQChen/andor_sdk.git
-RUN cd /andor_sdk && ./install_andor
+#run this manually in container: cd /andor_sdk && ./install_andor
 
 # install dependencies specific to our cpp build system
 # (by default, anything you run in Docker is done as superuser, so we won't need sudo)
