--- a/config/setup.toml
+++ b/config/setup.toml
@@ -5,43 +5,40 @@ source      = "Andor"
 file        = ""
 
 [andor]
-# Bools
-Overlap                     = false             # link framerate to exposure
-StaticBlemishCorrection     = true              # FPGA noisy pixels
-FastAOIFrameRateEnable      = true              # increase fps for small AOI
-FullAOIControl              = true              # arbitrary selection
-AlternatingReadoutDirection = true              # sensor direction
-RollingShutterGlobalClear   = false             # faster clear
-ScanSpeedControlEnable      = false             # allow change line row scan
-SensorCooling               = true
-MetadataEnable              = false
-MetadataTimestamp           = false
-MetadataFrameinfo           = false
-
-# ints
-FrameCount                  = 1         # number of images to acquire in each sequence
-Accumulatecount             = 1         # number of images to sum as one
-ImageSizeBytes              = 0
-TimeStampClock              = 0
-TimeStampClockFrequency     = 0
-
-# floats
+[andor.bool]                                    # Andor uses int as AT_BOOL, so we'll do the same (i.e. 1 = true, 0 = false)
+Overlap                     = 0                 # link framerate to exposure
+StaticBlemishCorrection     = 1                 # FPGA noisy pixels
+FastAOIFrameRateEnable      = 1                 # increase fps for small AOI
+FullAOIControl              = 1                 # arbitrary selection
+AlternatingReadoutDirection = 1                 # sensor direction
+RollingShutterGlobalClear   = 0                 # faster clear
+ScanSpeedControlEnable      = 0                 # allow change line row scan
+SensorCooling               = 1
+MetadataEnable              = 0
+MetadataTimestamp           = 0
+MetadataFrameinfo           = 0
+[andor.float]
 ExposureTime                = 0.004     # seconds
 FrameRate                   = 40.0      # Hz
-ReadoutTime                 = 0
-RowReadTime                 = 0
-LineScanSpeed               = 0
-TargetSensorTemperature     = 0
-SensorTemperature           = 0
-
-# enums/ints
+ReadoutTime                 = 0.0
+RowReadTime                 = 0.0
+LineScanSpeed               = 0.0
+TargetSensorTemperature     = 0.0
+SensorTemperature           = 0.0
+[andor.enum]
 TriggerMode                 = "Internal"        # trigger shutter
 CycleMode                   = "Continous"       # fix or continuous sequence
 ElectronicShutteringMode    = "Rolling"         # rolling or global
 PixelReadoutRate            = "280 MHz"
 TemperatureStatus           = "Stabilized"
-# set Area/Region of Interest (AOI/ROI)
+SensorReadoutMode           = "Bottom Up Sequential"
+SimplePreAmpGainControl     = "16-bit (low noise & high well capacity)"
+PixelEncoding               = "Mono16"      # Single channel 16-bit
+BitDepth                    = "16 Bit"
+# AOI (area of interest) settings start
+AOILayout                   = "Image"           # Kinetic, TDI, Multitrack
 AOIBinning                  = "2x2"             # binning, intensity vs resolution
+[andor.int]
 AOIHBin                     = 2                 # horizontal binning
 AOIWidth                    = 888 # 1776/2      # units in superpixels (540 superpixels * 2 pixels/superpixel)
 AOILeft                     = 1                 # units in sensor pixels
@@ -49,11 +46,12 @@ AOIVBin                     = 2                 # vertical binning
 AOIHeight                   = 1760              # units in superpixels
 AOITop                      = 1                 # units in sensor pixels
 AOIStride                   = 1776 # 1776/2*2   # row size (AOIWidth) in bytes (1080 pixels * 2 bytes/pixel)
-AOILayout                   = "Image"       # Kinetic, TDI, Multitrack
-SensorReadoutMode           = "Bottom Up Sequential"
-SimplePreAmpGainControl     = "16-bit (low noise & high well capacity)"
-PixelEncoding               = "Mono16"      # Single channel 16-bit
-BitDepth                    = "16 Bit"
+# AOI (area of interest) settings end
+FrameCount                  = 1         # number of images to acquire in each sequence
+Accumulatecount             = 1         # number of images to sum as one
+ImageSizeBytes              = 0
+TimeStampClock              = 0
+TimeStampClockFrequency     = 0
 
 [improc]
 # enable/disable image processing [bool]
