--- a/config/setup.toml
+++ b/config/setup.toml
@@ -10,9 +10,9 @@ Overlap                     = 0                 # link framerate to exposure
 StaticBlemishCorrection     = 1                 # FPGA noisy pixels
 FastAOIFrameRateEnable      = 1                 # increase fps for small AOI
 FullAOIControl              = 1                 # arbitrary selection
-AlternatingReadoutDirection = 1                 # sensor direction
-RollingShutterGlobalClear   = 0                 # faster clear
-ScanSpeedControlEnable      = 0                 # allow change line row scan
+# AlternatingReadoutDirection = 1                 # sensor direction
+# RollingShutterGlobalClear   = 0                 # faster clear
+# ScanSpeedControlEnable      = 0                 # allow change line row scan
 SensorCooling               = 1
 MetadataEnable              = 0
 MetadataTimestamp           = 0
@@ -27,22 +27,22 @@ TargetSensorTemperature     = 0.0
 SensorTemperature           = 0.0
 [andor.enum]
 TriggerMode                 = "Internal"        # trigger shutter
-CycleMode                   = "Continous"       # fix or continuous sequence
+CycleMode                   = "Continuous"      # fix or continuous sequence
 ElectronicShutteringMode    = "Rolling"         # rolling or global
 PixelReadoutRate            = "280 MHz"
 TemperatureStatus           = "Stabilized"
-SensorReadoutMode           = "Bottom Up Sequential"
+# SensorReadoutMode           = "Bottom Up Sequential"
 SimplePreAmpGainControl     = "16-bit (low noise & high well capacity)"
 PixelEncoding               = "Mono16"      # Single channel 16-bit
 BitDepth                    = "16 Bit"
 # AOI (area of interest) settings start
-AOILayout                   = "Image"           # Kinetic, TDI, Multitrack
+# AOILayout                   = "Image"           # Kinetic, TDI, Multitrack
 AOIBinning                  = "2x2"             # binning, intensity vs resolution
 [andor.int]
-AOIHBin                     = 2                 # horizontal binning
+# AOIHBin                     = 2                 # horizontal binning
 AOIWidth                    = 888 # 1776/2      # units in superpixels (540 superpixels * 2 pixels/superpixel)
 AOILeft                     = 1                 # units in sensor pixels
-AOIVBin                     = 2                 # vertical binning
+# AOIVBin                     = 2                 # vertical binning
 AOIHeight                   = 1760              # units in superpixels
 AOITop                      = 1                 # units in sensor pixels
 AOIStride                   = 1776 # 1776/2*2   # row size (AOIWidth) in bytes (1080 pixels * 2 bytes/pixel)
