--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,18 +123,18 @@ add_subdirectory(src)
 add_subdirectory(apps)
 
 # Adding the tests:
-option(ENABLE_TESTING "Enable the tests" ${PROJECT_IS_TOP_LEVEL})
-if(ENABLE_TESTING)
-  enable_testing()
-  message(AUTHOR_WARNING "Building Tests. Be sure to check out test/constexpr_tests.cpp for constexpr testing")
-  add_subdirectory(test)
-endif()
+# option(ENABLE_TESTING "Enable the tests" ${PROJECT_IS_TOP_LEVEL})
+# if(ENABLE_TESTING)
+#   enable_testing()
+#   message(AUTHOR_WARNING "Building Tests. Be sure to check out test/constexpr_tests.cpp for constexpr testing")
+#   add_subdirectory(test)
+# endif()
 
-option(ENABLE_FUZZING "Enable the fuzz tests" OFF)
-if(ENABLE_FUZZING)
-  message(AUTHOR_WARNING "Building Fuzz Tests, using fuzzing sanitizer https://www.llvm.org/docs/LibFuzzer.html")
-  add_subdirectory(fuzz_test)
-endif()
+# option(ENABLE_FUZZING "Enable the fuzz tests" OFF)
+# if(ENABLE_FUZZING)
+#   message(AUTHOR_WARNING "Building Fuzz Tests, using fuzzing sanitizer https://www.llvm.org/docs/LibFuzzer.html")
+#   add_subdirectory(fuzz_test)
+# endif()
 
 if(CMAKE_SKIP_INSTALL_RULES)
   return()
