--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 # add_subdirectory(sdl)
 add_subdirectory(util)
-add_subdirectory(gui)
 add_subdirectory(cam)
+add_subdirectory(improc)
+add_subdirectory(gui)
