--- a/.devcontainer/Dockerfile.ubuntu-cpp
+++ b/.devcontainer/Dockerfile.ubuntu-cpp
@@ -5,10 +5,11 @@ WORKDIR "/"
 # Install necessary packages available from standard repos
 RUN apt-get update -qq && export DEBIAN_FRONTEND=noninteractive && \
     apt-get install -y --no-install-recommends \
-        software-properties-common wget apt-utils file zip unzip pkg-config \
-        openssh-client gpg-agent socat rsync \
-        make ninja-build git \
-        python3 python3-pip
+    software-properties-common wget apt-utils file zip unzip pkg-config \
+    openssh-client gpg-agent socat rsync \
+    make ninja-build git \
+    python3 python3-pip \
+    yaru-theme-gtk yaru-theme-sound yaru-theme-gnome-shell yaru-theme-icon yaru-theme-unity
 
 # setup access to ssh-agent on host
 RUN apt-get update \
