--- a/config/setup.toml
+++ b/config/setup.toml
@@ -10,6 +10,9 @@ fontSize = 36.0
 scale = 2.0
 fontPath = "/root/.local/share/fonts/JetBrainsMono-1.0.2/ttf/JetBrainsMono-Medium.ttf"
 
+startImCap = false
+showDebug = false
+
 [cam]
 # select camera source [string: "Webcam"/"File"/"Andor"]
 source      = "Webcam"
