--- a/config/setup.toml
+++ b/config/setup.toml
@@ -11,7 +11,7 @@ scale = 2.0
 fontPath = "/root/.local/share/fonts/JetBrainsMono-1.0.2/ttf/JetBrainsMono-Medium.ttf"
 
 startImCap = false
-setupTmplMatch = false
+setupImProc = false
 startImProc = false
 showDebug = false
 
