fixed dxhat, control input divergence issue in simulation

--- a/config/setup.toml
+++ b/config/setup.toml
@@ -15,6 +15,7 @@ startImProc = false
 startImProcSetup = false
 startCtrl = false
 startCtrlSetup = false
+pauseCtrlDataViz = false
 showDebug = false
 
 [cam]
