show event queue in gui

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Raw Image Capture]
 Pos=0,24
-Size=1920,992
+Size=1354,992
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -51,9 +51,9 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Dear ImGui Demo]
-Pos=1478,769
-Size=550,680
-Collapsed=1
+Pos=1054,100
+Size=685,862
+Collapsed=0
 
 [Window][Proc Image Capture]
 Pos=245,24
@@ -103,6 +103,100 @@ Pos=345,38
 Size=980,976
 Collapsed=0
 
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=18
+Column 0  Width=80
+Column 1  Width=80
+Column 2  Width=80
+
+[Table][0x47600645,3]
+RefScale=18
+Column 0  Width=80
+Column 1  Width=80
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=18
+Column 0  Width=80
+Column 1  Width=80
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=18
+Column 0  Width=80
+Column 1  Width=80
+Column 2  Width=80
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=18
+Column 0  Width=71
+Column 1  Width=71
+Column 2  Width=71
+
+[Table][0x49F8DCEA,3]
+RefScale=18
+Column 0  Weight=1.0000
+Column 1  Width=108
+Column 2  Width=162
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=18
+Column 0  Width=105
+Column 1  Width=105
+Column 2  Width=105
+
+[Table][0xDA36A7E0,6]
+RefScale=18
+Column 0  Width=36 Sort=0v
+Column 1  Width=54
+Column 2  Width=87
+Column 3  Width=86
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x20DF7A63,4]
+RefScale=18
+Column 0  Width=36 Sort=0v
+Column 1  Width=54
+Column 2  Width=54
+Column 3  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=18
+Column 0  Width=62
+Column 1  Width=142
+Column 2  Width=142
+Column 3  Width=142
+Column 4  Width=142
+Column 5  Width=142
+Column 6  Width=142
+
 [Docking][Data]
 DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
   DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=1354,992 Split=X
@@ -113,7 +207,7 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X
         DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=131,342 Selected=0x7DA48818
     DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1167,992 Split=Y Selected=0x820FDA7D
       DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1472,457 Selected=0x7C819FC7
-      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0x820FDA7D
+      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0xB903C8C9
   DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=564,992 Split=Y Selected=0xB4128790
     DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
     DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
