event queue improvements

--- a/imgui.ini
+++ b/imgui.ini
@@ -51,7 +51,7 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Dear ImGui Demo]
-Pos=1054,100
+Pos=959,107
 Size=685,862
 Collapsed=0
 
@@ -72,8 +72,8 @@ Size=485,474
 Collapsed=0
 
 [Window][Ctrl Setup]
-Pos=1356,24
-Size=564,992
+Pos=1266,24
+Size=654,992
 Collapsed=0
 DockId=0x00000010,0
 
@@ -104,13 +104,13 @@ Size=980,976
 Collapsed=0
 
 [Table][0xC9935533,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+Column 0  Weight=0.5594
+Column 1  Weight=1.4406
 Column 2  Weight=1.0000
 
 [Table][0x64418101,3]
 RefScale=18
-Column 0  Width=80
+Column 0  Width=66
 Column 1  Width=80
 Column 2  Width=80
 
@@ -197,9 +197,48 @@ Column 4  Width=142
 Column 5  Width=142
 Column 6  Width=142
 
+[Table][0x9B8E7538,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xC179E37C,3]
+RefScale=18
+Column 0  Width=139 Sort=0v
+Column 1  Width=80
+Column 2  Width=-1
+
+[Table][0xA9598DD1,3]
+RefScale=18
+Column 0  Width=98
+Column 1  Width=200
+Column 2  Width=89
+
+[Table][0x475FE97E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xC51D6398,5]
+Column 0  Weight=0.3852
+Column 1  Weight=1.6051
+Column 2  Weight=1.0032
+Column 3  Weight=1.0032
+Column 4  Weight=1.0032
+
+[Table][0x2279FEB5,4]
+Column 0  Weight=0.5316
+Column 1  Weight=0.5759
+Column 2  Weight=1.7025
+Column 3  Weight=1.1899
+
 [Docking][Data]
 DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
-  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=1354,992 Split=X
+  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=1264,992 Split=X
     DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=243,992 Split=Y Selected=0x0764DB78
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=131,314 Selected=0x0764DB78
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=131,676 Split=Y Selected=0x40C4A1A8
@@ -208,7 +247,7 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X
     DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1167,992 Split=Y Selected=0x820FDA7D
       DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1472,457 Selected=0x7C819FC7
       DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0xB903C8C9
-  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=564,992 Split=Y Selected=0xB4128790
+  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=654,992 Split=Y Selected=0xB4128790
     DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
     DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
       DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=553,198 Selected=0xB4128790
