--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Raw Image Capture]
-Pos=0,24
-Size=1354,992
+Pos=245,483
+Size=1159,533
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -45,19 +45,19 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][ImProc Setup]
-Pos=1356,24
-Size=564,992
+Pos=1406,24
+Size=514,992
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Dear ImGui Demo]
-Pos=959,107
+Pos=1041,116
 Size=685,862
 Collapsed=0
 
 [Window][Proc Image Capture]
 Pos=245,24
-Size=1109,457
+Size=1159,457
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -72,8 +72,8 @@ Size=485,474
 Collapsed=0
 
 [Window][Ctrl Setup]
-Pos=1266,24
-Size=654,992
+Pos=1406,24
+Size=514,992
 Collapsed=0
 DockId=0x00000010,0
 
@@ -99,8 +99,18 @@ Size=530,740
 Collapsed=0
 
 [Window][Ctrl Data]
-Pos=345,38
-Size=980,976
+Pos=540,81
+Size=839,893
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=671,397
+Size=512,212
+Collapsed=0
+
+[Window][Delete?]
+Pos=766,434
+Size=388,148
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -224,21 +234,27 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0xC51D6398,5]
-Column 0  Weight=0.3852
-Column 1  Weight=1.6051
-Column 2  Weight=1.0032
-Column 3  Weight=1.0032
-Column 4  Weight=1.0032
+Column 0  Weight=0.3801
+Column 1  Weight=0.6757
+Column 2  Weight=0.7517
+Column 3  Weight=0.7517
+Column 4  Weight=2.4408
 
 [Table][0x2279FEB5,4]
-Column 0  Weight=0.5316
-Column 1  Weight=0.5759
-Column 2  Weight=1.7025
-Column 3  Weight=1.1899
+Column 0  Weight=0.5324
+Column 1  Weight=0.5857
+Column 2  Weight=1.7637
+Column 3  Weight=1.1181
+
+[Table][0xA9513BD8,4]
+Column 0  Weight=0.9957
+Column 1  Weight=0.9702
+Column 2  Weight=1.0340
+Column 3  Weight=1.0000
 
 [Docking][Data]
 DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
-  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=1264,992 Split=X
+  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=1404,992 Split=X
     DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=243,992 Split=Y Selected=0x0764DB78
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=131,314 Selected=0x0764DB78
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=131,676 Split=Y Selected=0x40C4A1A8
@@ -246,8 +262,8 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X
         DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=131,342 Selected=0x7DA48818
     DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1167,992 Split=Y Selected=0x820FDA7D
       DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1472,457 Selected=0x7C819FC7
-      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0xB903C8C9
-  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=654,992 Split=Y Selected=0xB4128790
+      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0x820FDA7D
+  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=514,992 Split=Y Selected=0xB4128790
     DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
     DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
       DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=553,198 Selected=0xB4128790
