cleaned up state0, state1 event handling & state transitions

--- a/config/setup.toml
+++ b/config/setup.toml
@@ -92,6 +92,7 @@ dataPath    = "/autoDMP/data/ctrl/"
 status          = "disabled"
 # perform all steps but don't send control signal to pump [bool]
 dryRun          = true
+simMode         = true
 
 [postproc]
 # path for improc data
