--- a/config/setup.toml
+++ b/config/setup.toml
@@ -15,6 +15,7 @@ startImProc = false
 startImProcSetup = false
 startCtrl = false
 startCtrlSetup = false
+startSysID = false
 pauseCtrlDataViz = false
 showDebug = false
 
