--- a/imgui.ini
+++ b/imgui.ini
@@ -51,7 +51,7 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Dear ImGui Demo]
-Pos=1041,116
+Pos=627,93
 Size=685,862
 Collapsed=0
 
@@ -67,13 +67,13 @@ Size=461,606
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=78,94
+Pos=160,105
 Size=485,474
 Collapsed=0
 
 [Window][Ctrl Setup]
-Pos=1335,24
-Size=585,992
+Pos=1500,24
+Size=420,992
 Collapsed=0
 DockId=0x00000010,0
 
@@ -111,6 +111,17 @@ Collapsed=0
 [Window][Delete?]
 Pos=766,434
 Size=388,148
+Collapsed=0
+
+[Window][SysID Setup]
+Pos=0,24
+Size=1498,992
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][SysID]
+Pos=572,255
+Size=1138,672
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -254,7 +265,7 @@ Column 3  Weight=1.2234
 
 [Docking][Data]
 DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
-  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=1333,992 Split=X
+  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=538,992 Split=X
     DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=243,992 Split=Y Selected=0x0764DB78
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=131,314 Selected=0x0764DB78
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=131,676 Split=Y Selected=0x40C4A1A8
@@ -262,8 +273,8 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X
         DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=131,342 Selected=0x7DA48818
     DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1167,992 Split=Y Selected=0x820FDA7D
       DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1472,457 Selected=0x7C819FC7
-      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0x820FDA7D
-  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=585,992 Split=Y Selected=0xB4128790
+      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0x4E7AB692
+  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=420,992 Split=Y Selected=0xB4128790
     DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
     DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
       DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=553,198 Selected=0xB4128790
