--- a/src/ctrl/CMakeLists.txt
+++ b/src/ctrl/CMakeLists.txt
@@ -2,10 +2,11 @@
 set(HEADER_LIST "../../include/ctrl/supervisor.hpp"
     "../../include/ctrl/state/state.hpp"
     "../../include/ctrl/state/state0.hpp"
-    "../../include/ctrl/state/state1.hpp")
+    "../../include/ctrl/state/state1.hpp"
+    "../../include/ctrl/state/sysidstate.hpp")
 
 # Make an automatic library - will be static or dynamic based on user setting
-add_library(ctrl supervisor.cpp
+add_library(ctrl supervisor.cpp state/sysidstate.cpp
   state/state.cpp state/state0.cpp state/state1.cpp ${HEADER_LIST})   # target is created
 
 target_link_libraries(
